--- a/autoeducate/app/ensayos/ensayos.css
+++ b/autoeducate/app/ensayos/ensayos.css
@@ -7,6 +7,13 @@ body{
   display: flex;
   min-height: 100vh;
 }
+.container-center-horizontal-2{
+  display: flex;
+  flex-direction : row ;
+  justify-content : center ;
+  width: 100%;
+  height: auto;
+}
 .form2{
   background-color: #fff;
   margin: auto;
@@ -189,6 +196,7 @@ input[type="radio"]:checked + .radio-labelD .radio-imageD {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  flex-direction: row-reverse;
 }
 .button-ensayo {
   align-items: center;
